style.css
body{
    display: flex;
    flex-direction: column;
    font-family: Roboto, arial;
}

.header{
    background-color: #1F2937;
    color: white;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 8px;
    padding-left: 32px;
    padding-right: 32px;
}

h1{
    font-size: 24px;
}

h2{
    font-size: 48px;
    color: #f9faf8;
    font-weight: 900;
    margin-bottom: 0px;
}
ul{
    list-style-type: none;
}

li{
    color: #E5E7EB;
    font-size: 18px;
    display: inline-block;
    margin-right: 10px;
}



.body-1{
    background-color: #1F2937;
    color: white;
    display: flex;
    padding: 32px;
    flex-wrap: wrap;
    padding-left: 32px;
    padding-right: 32px;
    flex-basis: 1;
    flex-wrap: nowrap;
}


.button-1{
    display: flex;
    border-radius: 15px 15px 15px 15px;
}

.body-1a{
    padding-right: 32px;
    gap: 16px;
}

.body-1b img{
    max-width: 90%;
    padding: 32px;
}

.body-2{
    font-size: 36px;
    color: #1f2937;
    font-weight: 900;
    display: flex;
    align-items: center;
    padding: 32px;
    padding-left: 32px;
    padding-right: 32px;
    justify-content: center;
}

.body-2i{
    display:flex;
    flex-basis: 1;
    align-items: space-evenly;
}

.body-2ii{
    display: flex;
    flex-direction: row;
    margin-top: 0px;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: space-evenly;
}

.body-2a {
    display: flex;
    flex-direction: column;
    max-width: 15%;
    margin-left: 32px;
    margin-bottom: 64px;
    justify-content: center;
}

.body-2a img { 
    max-width: 90%;
    max-height: auto;
    outline-style: solid;
    outline-color:#3882F6;
    outline-width: 8px;
    border-radius: 15px 15px 15px 15px;
    padding: 16px;
}

.body-2a p {
    color: #1f2937;
    margin-top: 10px;
}

.body-2b {
    display: flex;
    flex-direction: column;
    max-width: 15%;
    padding: 16px;
    margin-left: 32px;
    margin-bottom: 64px;
}

.body-2b img { 
    max-width: 90%;
    max-height: auto;
    outline-style: solid;
    outline-color:#3882F6;
    outline-width: 8px;
    border-radius: 15px 15px 15px 15px;
    padding: 16px;
}


.body-2b p {
    color: #1f2937;
    margin-top: 10px;
}

.body-2c {
    display: flex;
    flex-direction: column;
    max-width: 15%;
    padding: 16px;
    margin-left: 32px;
    margin-bottom: 64px;
}

.body-2c img { 
    max-width: 90%;
    max-height: auto;
    outline-style: solid;
    outline-color:#3882F6;
    outline-width: 8px;
    border-radius: 15px 15px 15px 15px;
    padding: 16px;
}


.body-2c p {
    color: #1f2937;
    margin-top: 10px;
}

.body-2d {
    display: flex;
    flex-direction: column;
    max-width: 15%;
    padding: 16px;
    margin-left: 32px;
    margin-bottom: 64px;
}

.body-2d img { 
    max-width: 90%;
    max-height: auto;
    outline-style: solid;
    outline-color:#3882F6;
    outline-width: 8px;
    border-radius: 15px 15px 15px 15px;
    padding: 16px;
}


.body-2d p {
    color: #1f2937;
    margin-top: 10px;
}

.body-3{
    background-color: #E5E7EB;
    display: flex;
     padding-left: 32px;
    padding-right: 32px;
}

.body-3a{
    display: flex;
    padding: 64px;
}

.body-3b{
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
}

h4{
    font-weight: normal;
    font-style: italic;
    font-size: 36px;
    color: #1f2937;
}

h5{
    font-size: 24px;
}


.body-4{
    background-color: #3882F6;
    display: flex;
    justify-content: space-evenly;
    padding-left: 64px;
    padding-right: 64px;
    margin-top: 18px;
    margin-bottom: 18px;
    border-radius: 15px 15px 15px 15px;
    align-items: center;
    padding-left: 32px;
    padding-right: 32px;
}

.body-4i{
    display: flex;
    justify-content: center;
    align-items: center;
}

.body-4a{
    display: flex;
    flex-direction: column;
    gap: 0px;
    margin-bottom: 45px;   
}

.button-2{
    display:flex;
    border-radius: 15px 15px 15px 15px;
    border-color: white;
    margin-left: 32px;
    justify-content: flex-end;
}

.footer{
    background-color: #1F2937;
    display: flex;
    color: white;
    justify-content: center;
}

h6{
    color: white;
    font-size: 18px;
    margin-bottom: 0px;
}

p{
    color: #E5E7EB;
    font-size: 18px;
    margin-top: 0px;
    margin-bottom: 0px;
}

img{
   height: auto;
   object-fit: contain;
    padding: 32px;
}

button{
    background-color: #3882F6;
    padding: 16px;
    color: white;
    text-align: center;
    gap: 32px;
}

/*commnet for webpage update*/

